--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - "~/data"
 
   override:
-    - if [[ ! -d ~/data/sub-01 ]]; then wget -c -P ${HOME}/downloads/ "https://dl.dropboxusercontent.com/u/8970757/mrtrix3_connectome_data.tar" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/mrtrix3_connectome_data.tar -C ${HOME}/data; fi
+    - if [[ ! -d ~/data/mrtrix3_connectome_data ]]; then wget -c -P ${HOME}/downloads/ "https://dl.dropboxusercontent.com/u/8970757/mrtrix3_connectome_data.tar" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/mrtrix3_connectome_data.tar -C ${HOME}/data; fi
     - if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
     - git describe --tags > version
     - docker build -t bids/${CIRCLE_PROJECT_REPONAME,,} . :
@@ -24,12 +24,12 @@ test:
     # print version
     - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset bids/${CIRCLE_PROJECT_REPONAME,,} --version
     # participant level tests for single session dataset
-    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01 -parc fs_2005 -streamlines 1000000 :
+    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01 -parc fs_2005 -streamlines 1000000 :
         timeout: 21600
-    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 02 -parc fs_2005 -streamlines 1000000 :
+    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 02 -parc fs_2005 -streamlines 1000000 :
         timeout: 21600
 #    # group level test for single session dataset
-#    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group :
+#    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group :
 #        timeout: 21600
 
 deployment:
