Group-level analysis changes
- Re-enable testing of group-level analysis in CircleCI.
- Check presence of all necessary files for each subject before commencing group-level analysis.

--- a/circle.yml
+++ b/circle.yml
@@ -28,9 +28,9 @@ test:
         timeout: 21600
     - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 02 -parc aal -streamlines 100000 :
         timeout: 21600
-#    # group level test for single session dataset
-#    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group :
-#        timeout: 21600
+    # group level test for single session dataset
+    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/mrtrix3_connectome_data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group :
+        timeout: 21600
 
 deployment:
   hub:
