Command-line options: Split container and standslone usage
Rather than providing both single-dash and double-dash usage strings for each command-line option (for both compatibility with OpenNeuro and consistency with MRtrix3), these changes completely split the construction of command-line options depending on whether the script is running within a container or as a stand-alone script (against the MRtrix3 Python libraries). In the case of the former, the standard options provided by the MRtrix3 libraries are erased, and replaced with only relevant options, all with double-dash usage. For the latter, the standard MRtrix3 interface is retained: single-dash option strings and standard options that are common across all scripts.
First discussed in #12.

--- a/circle.yml
+++ b/circle.yml
@@ -25,9 +25,9 @@ test:
     # print version
     - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset bids/${CIRCLE_PROJECT_REPONAME,,} --version
     # participant level tests for single session dataset
-    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01 -parc aal -streamlines 100000 -preprocessed :
+    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01 --parcellation aal --streamlines 100000 --preprocessed :
         timeout: 21600
-    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 02 -parc aal -streamlines 100000 -preprocessed :
+    - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 02 --parcellation aal --streamlines 100000 --preprocessed :
         timeout: 21600
     # group level test for single session dataset
     - docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data:/bids_dataset -v ${HOME}/outputs:/outputs bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group :
