CircleCI: Fix container caching
Missing changes from 8fb0fa34.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: mkdir -p ~/docker; docker save "bids/${CIRCLE_PROJECT_REPONAME,,}" > ~/docker/image.tar
           no_output_timeout: 6h
       - save_cache:
-          key: image_cache-{{ git describe --tags --always }}-{{ .Revision }}-{{ epoch }}
+          key: image_cache-{{ checksum "Dockerfile" }}-{{ .Revision }}-{{ epoch }}
           paths:
             - "~/docker"
 
@@ -74,7 +74,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: image_cache-{{ git describe --tags --always }}-{{ .Revision }}-{{ epoch }}
+          key: image_cache-{{ checksum "Dockerfile" }}-{{ .Revision }}-{{ epoch }}
       - run:
           name: Load Docker image
           command: docker load -i /tmp/workspace/image.tar
