--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           key: image_cache-{{ .Revision }}
       - run:
           name: Download test data
-          command: mkdir -p ${HOME}/downloads && wget -c -O ${HOME}/downloads/BIDS.tar.gz "https://osf.io/yt9an/download" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/BIDS.tar.gz -C ${HOME}/data
+          command: mkdir -p ${HOME}/downloads && wget -c -O ${HOME}/downloads/preproc.tar.gz "https://osf.io/d9gx7/download" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/preproc.tar.gz -C ${HOME}/data
       - run:
           name: Load Docker image
           command: docker load -i ~/docker/image.tar
@@ -60,7 +60,7 @@ jobs:
           key: image_cache-{{ .Revision }}
       - run:
           name: Download test data
-          command: mkdir -p ${HOME}/downloads && wget -c -O ${HOME}/downloads/preproc.tar.gz "https://osf.io/67ga4/download" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/preproc.tar.gz -C ${HOME}/data
+          command: mkdir -p ${HOME}/downloads && wget -c -O ${HOME}/downloads/participant.tar.gz "https://osf.io/skc5x/download" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/participant.tar.gz -C ${HOME}/data
       - run:
           name: Load Docker image
           command: docker load -i ~/docker/image.tar
