--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,32 @@ jobs:
           command: docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/BIDS:/bids_dataset -v ${HOME}/data:/outputs -v ${HOME}/scratch:/scratch bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --scratch /scratch --parcellation aal --streamlines 100000
           no_output_timeout: 6h
 
+
+  test_group:
+    machine:
+      image: circleci/classic:latest
+
+    steps:
+      - checkout
+      - restore_cache:
+          key: image_cache-{{ .Revision }}
+      - run:
+          name: Download test data
+          command: mkdir -p ${HOME}/downloads && wget -c -O ${HOME}/downloads/group.tar.gz "https://osf.io/6s8bx/download" && mkdir -p ${HOME}/data && tar xf ${HOME}/downloads/group.tar.gz -C ${HOME}/data
+      - run:
+          name: Make scratch directory
+          command: mkdir ${HOME}/scratch
+      - run:
+          name: Load Docker image
+          command: docker load -i ~/docker/image.tar
+      - run:
+          name: Print version
+          command: docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp bids/${CIRCLE_PROJECT_REPONAME,,} --version
+      - run:
+          name: Run group-level analysis
+          command: docker run -ti --rm --read-only -v /tmp:/tmp -v /var/tmp:/var/tmp -v ${HOME}/data/BIDS:/bids_dataset -v ${HOME}/data:/outputs -v ${HOME}/scratch:/scratch bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs group
+          no_output_timeout: 6h
+
  
   deploy:
     docker:
@@ -125,11 +151,20 @@ workflows:
               only: /.*/
             branches:
               only: /.*/
+      - test_group:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
       - deploy:
           requires:
             - build
             - test_preproc
-            - test_participant            
+            - test_participant
+            - test_group
           filters:
             branches:
               ignore: /.*/
