--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     machine:
-      image: circleci/classic:latest
+      image: ubuntu-2204:2022.10.2
 
     steps:
       - checkout
@@ -29,7 +29,7 @@ jobs:
 
   test_preproc:
     machine:
-      image: circleci/classic:latest
+      image: ubuntu-2204:2022.10.2
 
     steps:
       - checkout
@@ -55,7 +55,7 @@ jobs:
 
   test_participant:
     machine:
-      image: circleci/classic:latest
+      image: ubuntu-2204:2022.10.2
 
     steps:
       - checkout
@@ -81,7 +81,7 @@ jobs:
 
   test_group:
     machine:
-      image: circleci/classic:latest
+      image: ubuntu-2204:2022.10.2
 
     steps:
       - checkout
@@ -106,8 +106,8 @@ jobs:
 
  
   deploy:
-    docker:
-      - image: circleci/classic:latest
+    machine:
+      image: ubuntu-2204:2022.10.2
 
     steps:
       - checkout
@@ -126,7 +126,6 @@ jobs:
           no_output_timeout: 6h
 
 workflows:
-  version: 2.1
   build_test_deploy:
     jobs:
       - build:
@@ -170,3 +169,5 @@ workflows:
               ignore: /.*/
             tags:
               only: /.*/
+
+# VS Code Extension Version: 1.5.1
