--- a/.github/workflows/test_latest.yml
+++ b/.github/workflows/test_latest.yml
@@ -34,7 +34,7 @@
             -v /var/tmp:/var/tmp \
                 bids/mrtrix3_connectome:latest --version
   
-    test_participant:
+    test_preproc:
   
       runs-on: ubuntu-latest
   
@@ -70,7 +70,49 @@
   
       - name: check output
         run: tree ${HOME}/outputs
-          
+
+    test_participant:
+  
+      runs-on: ubuntu-latest
+
+      steps:
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tree
+
+      - name: pull docker image
+        run: docker pull bids/mrtrix3_connectome:latest
+
+      - name: get data
+        run: |
+          mkdir -p ${HOME}/downloads
+          wget -c -O ${HOME}/downloads/participant.tar.gz "https://osf.io/skc5x/download"
+          mkdir -p ${HOME}/data
+          tar xf ${HOME}/downloads/participant.tar.gz -C ${HOME}/data
+
+      - name: prepare output dir
+        run: |
+          mkdir -p ${HOME}/outputs
+
+      - name: Run preproc-level analysis for all subjects
+        run: |
+          docker run -t --rm --read-only \
+            -v /tmp:/tmp -v /var/tmp:/var/tmp \
+            -v ${HOME}/data/BIDS:/bids_dataset \
+            -v ${HOME}/data/outputs:/outputs \
+            -v ${HOME}/scratch:/scratch \
+              bids/mrtrix3_connectome \
+                /bids_dataset /outputs participant \
+                --scratch /scratch \
+                --parcellation aal \
+                --streamlines 100000 \
+                --output_verbosity 3
+
+
+      - name: check output
+        run: tree ${HOME}/outputs
+
     test_group:
   
       runs-on: ubuntu-latest
@@ -95,7 +137,7 @@
         run: |
           mkdir -p ${HOME}/outputs
   
-      - name: Run preproc-level analysis for all subjects
+      - name: Run group-level analysis
         run: |
           docker run -t --rm --read-only \
             -v /tmp:/tmp -v /var/tmp:/var/tmp \
